# halo2-native-ecc

./: .gitignore  Cargo.toml  README.md
src/: arith_gates.rs  chip.rs  config.rs  ec_gates.rs  ec_structs.rs  gates.rs  lib.rs  tests.rs  util.rs
src/arith_gates/: tests.rs
src/ec_gates/: tests.rs
